--- a/f-tep-portal/src/main/resources/app/styles/less/explorer/sidebar/sidebar.less
+++ b/f-tep-portal/src/main/resources/app/styles/less/explorer/sidebar/sidebar.less
@@ -2,11 +2,10 @@
 #sidebar-left {
     background-color: transparent;
     height: 100%;
-    padding-left: @sidenav-width;
+    margin-left: @sidenav-width;
     padding-top: @navbar-height;
     position: absolute;
     min-width: @sidebar-width;
-    max-width: @sidebar-width;
     z-index: 2;
     form {
         padding-bottom: 30px;
