--- a/f-tep-portal/src/main/resources/app/styles/less/explorer/sidenav.less
+++ b/f-tep-portal/src/main/resources/app/styles/less/explorer/sidenav.less
@@ -4,7 +4,7 @@
     left: 0;
     position: fixed;
     top: 0;
-    max-width: @sidenav-width;
+    width: @sidenav-width;
     z-index: 10;
     .bg-trans-dark(@bg-dark);
     &:hover {
