--- a/f-tep-portal/src/main/resources/app/styles/less/variable.less
+++ b/f-tep-portal/src/main/resources/app/styles/less/variable.less
@@ -65,7 +65,7 @@
 @text-hint-light-fade-percentage: 50%;
 
 @sidenav-width: 44px;
-@sidebar-width: 380px;
+@sidebar-width: 336px;
 @navbar-height: 50px;
 @min-width: calc(@sidenav-width ~"+" @sidebar-width);
 @xs-max-width: 767px;
